# perceptron

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: publish.yml  release.yml  tests.yml
examples/icl_detection/: README.md
huggingface/: README.md  __init__.py  main.py  modular_isaac.py
src/perceptron/: __init__.py  annotations.py  cli.py  client.py  config.py  errors.py  highlevel.py
src/perceptron/dsl/: nodes.py  perceive.py
src/perceptron/pointing/: parser.py  types.py
src/perceptron/tensorstream/: __init__.py  ops.py  tensorstream.py
tests/: conftest.py  test_async_client.py  test_async_perceive.py  test_cli.py  test_dsl_compile.py  test_highlevel_caption_ocr.py  test_highlevel_detect.py  test_perceive_inspect.py  test_pointing_parser.py  test_streaming.py  test_streaming_buffer.py  test_transport_payloads.py  test_validation.py  test_validation_polygon.py
